--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,11 +22,11 @@
     <parent>
         <groupId>org.apache.oozie</groupId>
         <artifactId>oozie-main</artifactId>
-        <version>3.3.2-cdh4.6.0</version>
+        <version>3.3.2-cdh4.6.0-OOZIE-1476-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.oozie</groupId>
     <artifactId>oozie-client</artifactId>
-    <version>3.3.2-cdh4.6.0</version>
+    <version>3.3.2-cdh4.6.0-OOZIE-1476-SNAPSHOT</version>
     <description>Apache Oozie Client</description>
     <name>Apache Oozie Client</name>
     <packaging>jar</packaging>
