--- a/minitest/pom.xml
+++ b/minitest/pom.xml
@@ -23,12 +23,12 @@
     <parent>
         <groupId>org.apache.oozie</groupId>
         <artifactId>oozie-main</artifactId>
-        <version>3.3.2-cdh4.6.0</version>
+        <version>3.3.2-cdh4.6.0-OOZIE-1476-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.oozie.test</groupId>
     <artifactId>oozie-mini</artifactId>
-    <version>3.3.2-cdh4.6.0</version>
+    <version>3.3.2-cdh4.6.0-OOZIE-1476-SNAPSHOT</version>
     <description>Apache Oozie MiniOozie</description>
     <name>Apache Oozie MiniOozie</name>
 
