--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </parent>
     <groupId>org.apache.oozie</groupId>
     <artifactId>oozie-main</artifactId>
-    <version>3.3.2-cdh4.6.0</version>
+    <version>3.3.2-cdh4.6.0-OOZIE-1476-SNAPSHOT</version>
     <description>Apache Oozie Main</description>
     <name>Apache Oozie Main</name>
     <packaging>pom</packaging>
@@ -74,8 +74,8 @@
         <hadoop.version>${cdh.hadoop.version}</hadoop.version>
         <hbase.version>${cdh.hbase.version}</hbase.version>
 
-        <hadooplib.version>${hadoop.version}.oozie-${project.version}</hadooplib.version>
-        <hbaselib.version>${hbase.version}.oozie-${project.version}</hbaselib.version>
+        <hadooplib.version>${hadoop.version}.oozie-3.3.2-cdh4.6.0</hadooplib.version>
+        <hbaselib.version>${hbase.version}.oozie-3.3.2-cdh4.6.0</hbaselib.version>
 
         <!--
         This is required while we support a a pre 0.23 version of Hadoop which does not have
@@ -102,9 +102,9 @@
         <module>hadooplibs</module>
         <module>hbaselibs</module>
         <module>core</module>
+        <module>docs</module>
         <module>webapp</module>
         <module>examples</module>
-        <module>docs</module>
         <module>sharelib</module>
         <module>tools</module>
         <module>minitest</module>
